# evo-ai-agents-labs

./: .gitignore  README.md  agent.txt  g.txt  g1.txt  gos.txt  gosplan.txt  models.py  okpd2.csv  okpd2_full.csv
agent-profiler/: .env.example  Dockerfile  README.md  SYSTEM.md  env_options.json  pyproject.toml
agent-profiler/src/: a2a_wrapper.py  agent.py  agent_task_manager.py  base_prompt.py  company_facts.py  config.py  okpd2_index.py  react_executor.py  start_a2a.py
agent-profiler/src/tools/: okpd2_tool.py
agent-purchase-matcher/: .env.example  Dockerfile  README.md  env_tools.json  pyproject.toml
agent-purchase-matcher/src/: a2a_wrapper.py  agent.py  agent_task_manager.py  mcp_utils.py  prompts.py  session_state.py  start_a2a.py
agent-purchaser/: .env.example  Dockerfile  README.md  env_options.json  pyproject.toml
agent-purchaser/src/: a2a_wrapper.py  agent.py  agent_task_manager.py  base_prompt.py  config.py  start_a2a.py
agent-service/: .env.example  Dockerfile  README.md  docker-compose.yaml  env_options.json  mcp-server-catalog.yaml  mcp_tools.json  pyproject.toml
agent-service/src/: classifiers.py  config.py  mcp_instance.py  models.py  okpd2_index.py  profile_agent.py  server.py  start_profile_agent.py
agent-service/src/tools/: __init__.py  generate_company_profile.py  utils.py
codes-mcp/: .env.example  Dockerfile  README.md  env_options.json  mcp_tools.json  okpd2.csv  pyproject.toml  regiones.csv
codes-mcp/src/: config.py  mcp_instance.py  server.py
codes-mcp/src/tools/: get_okdp2_codes.py  get_okpd2_codes.py  get_regions_codes.py  utils.py
db/: docker-compose.yaml
db-mcp/: .env.example  Dockerfile  README.md  docker-compose.yaml  env_options.json  mcp-server-catalog.yaml  mcp_tools.json  pyproject.toml
db-mcp/src/: config.py  db.py  main.py  mcp_instance.py  models.py  server.py  utils.py
db-mcp/src/tools/: __init__.py  create_company_profile.py  get_company_profile.py  list_company_profiles.py  utils.py
gosplan-mcp/: .env.example  Dockerfile  README.md  env_options.json  mcp_tools.json  pyproject.toml
gosplan-mcp/src/: config.py  mcp_instance.py  server.py
gosplan-mcp/src/tools/: gosplan_details.py  gosplan_search.py  models.py  utils.py
gosplan-mcp/src/utils/: __init__.py  settings.py
lab1-mcp-finance-lab/: .env.example  Dockerfile  README.md  env_options.json  mcp_tools.json  pyproject.toml
lab1-mcp-finance-lab/src/: calculations.py  config.py  main.py  mcp_instance.py  metrics.py  server.py  utils.py  validators.py
lab1-mcp-finance-lab/src/tools/: __init__.py  compare_loan_schedules.py  deposit_schedule_compound.py  investment_calculator.py  loan_schedule_annuity.py  loan_schedule_differential.py  utils.py
lab1-mcp-finance-lab/test/: __init__.py  test_calculations.py  test_validators.py
lab2-adk-agent/: .env.example  Dockerfile  README.md  pyproject.toml
lab2-adk-agent/src/: a2a_agent.py  agent.py  agent_task_manager.py  start_a2a.py
lab3-langchain-agent/: .env.example  README.md  pyproject.toml
lab3-langchain-agent/src/: __init__.py  a2a_wrapper.py  agent.py  start_a2a.py
lab4-smolagents-agent/: .env.example  README.md  pyproject.toml
lab4-smolagents-agent/src/: __init__.py  a2a_wrapper.py  agent.py  agent_task_manager.py  start_a2a.py
lab5-crewai-agent/: .env.example  Dockerfile  README.md  pyproject.toml
lab5-crewai-agent/src/: __init__.py  a2a_wrapper.py  agent_task_manager.py  agents.py  crew.py  start_a2a.py  tasks.py
lab6-strands-agent/: .env.example  Dockerfile  README.md  pyproject.toml
lab6-strands-agent/src/: __init__.py  a2a_wrapper.py  agent.py  agent_task_manager.py  start_a2a.py
lab6-strands-agent/tools/: .gitkeep
lab7-mattermost-bot-for-agents/: .gitignore  README.md  a2a_client.py  bot.py  commands.py  config.py  mattermost_handler.py  pyproject.toml  requirements.txt  telemetry.py
lab8-telegram-bot-for-agents/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
lab8-telegram-bot-for-agents/config/: __init__.py  config.py
lab8-telegram-bot-for-agents/src/handlers/: __init__.py  common.py
lab8-telegram-bot-for-agents/src/keyboards/: __init__.py
lab8-telegram-bot-for-agents/src/services/: __init__.py  agent_connector.py  request_manager.py
lab8-telegram-bot-for-agents/src/utils/: __init__.py  session.py  voice_processor.py
lab9-mcp-finance-go/: .dockerignore  .gitignore  Dockerfile  README.md  env_options.json  go.mod  go.sum  mcp-server-catalog.yaml  mcp_tools.json
lab9-mcp-finance-go/internal/calculations/: annuity.go  annuity_test.go  compare.go  deposit.go  differential.go  differential_test.go  investment.go  types.go
lab9-mcp-finance-go/internal/config/: config.go
lab9-mcp-finance-go/internal/metrics/: metrics.go
lab9-mcp-finance-go/internal/tools/: tools.go
lab9-mcp-finance-go/internal/tracing/: tracing.go
lab9-mcp-finance-go/internal/validators/: validators.go  validators_test.go
lab9-mcp-finance-go/pkg/utils/: utils.go  utils_test.go
purchase_matcher/: README.md
purchase_matcher/src/: a2a_wrapper.py  agent.py  agent_task_manager.py  config.py  prompts.py  start_a2a.py
ui/: README.md  app.py  requirements.txt
ui/static/: index.html
