[project]
name = "agent-service"
version = "0.1.0"
description = "ProfileAgent for classifying company descriptions and storing via db-mcp"
authors = [{name = "Evo AI Agents Labs"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.5.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.2.0,<1.0.0",
    "langchain_mcp_adapters",
    "a2a-sdk>=0.3.4,<0.4.0",
    "litellm>=1.76.3,<2.0.0",
    "openinference-instrumentation-langchain>=0.1.0,<0.2.0",
    "arize-phoenix-otel>=0.13.0,<0.14.0",
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
