[project]
name = "agent-service"
version = "0.1.0"
description = "PurchaseMatcher agent for selecting procurements via db-mcp and gosplan-mcp"
authors = [
    { name = "rexologue", email = "mironovigoroffical@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.1.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain_mcp_adapters>=0.2.1",
    "a2a-sdk>=0.3.4,<0.4.0",
    "litellm>=1.76.3,<2.0.0",
    "openinference-instrumentation-langchain>=0.1.0,<0.2.0",
    "arize-phoenix-otel>=0.13.0,<0.14.0",
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
