[project]
name = "agent-service"
version = "0.1.0"
description = "PurchaseMatcher Agent for working with db-mcp & gosplan-mcp via A2A"
authors = [
    { name = "rexologue", email = "mironovigoroffical@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "fastmcp>=0.5.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",

    # Новый стек LangChain v1
    "langchain>=1.1.0,<2.0.0",
    "langchain-core>=1.1.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",

    # КЛАССИЧЕСКИЙ API (старые агенты, AgentExecutor и т.д.)
    "langchain-classic>=1.0.0,<2.0.0",

    # MCP адаптер
    "langchain_mcp_adapters>=0.2.1",

    # A2A SDK
    "a2a-sdk>=0.3.4,<0.4.0",

    # Observability / tracing
    "litellm>=1.76.3,<2.0.0",
    "openinference-instrumentation-langchain>=0.1.0,<0.2.0",
    "arize-phoenix-otel>=0.13.0,<0.14.0",

    # Сетевуха / сервер
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
