[project]
name = "agent-service"
version = "0.1.0"
description = "ProfileAgent for classifying company descriptions and storing via db-mcp"
authors = [{name = "Evo AI Agents Labs"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.5.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "opentelemetry-api>=1.25.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "rapidfuzz>=3.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
