[project]
name = "codes-mcp"
version = "0.1.0"
description = "MCP server for providing OKPD2 and regions codes"
authors = [
    { name = "rexologue", email = "mironovigoroffical@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.5.0",
    "uvicorn",
    "opentelemetry-api>=1.25.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
