[project]
name = "db-mcp"
version = "0.1.0"
description = "MCP server for company profiles and tender matches backed by PostgreSQL"
authors = [{name = "Evo AI Agents Labs"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.5.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
