[project]
name = "db-mcp"
version = "0.1.0"
description = "MCP server for fetching purchases from GosPlan API"
authors = [
    { name = "StolovAR", email = "andrey.stolov.04@gmail.com" },
    { name = "rexologue", email = "mironovigoroffical@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.5.0",
    "uvicorn",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
