[project]
name = "mcp-finance"
version = "0.1.0"
description = ""
authors = [
    {name = "ermadatov",email = "ermadatov@cloud.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastmcp (>=2.12.2,<3.0.0)",
    "pydantic (>2.11.7,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
fastmcp = "^2.12.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
