[project]
name = "smolagents-agent"
version = "0.1.0"
description = "SmolAgents Agent для AI Agents платформы"
authors = [
    {name = "evo-ai-agents-labs", email = "labs@cloud.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "smolagents>=0.1.0,<1.0.0",
    "a2a-sdk>=0.3.4,<0.4.0",
    "litellm>=1.76.3,<2.0.0",
    "openinference-instrumentation-smolagents>=0.1.0,<0.2.0",
    "arize-phoenix-otel>=0.13.0,<0.14.0",
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

# Примечание: torch (транзитивная зависимость smolagents) не поддерживает Intel Mac (macosx_14_0_x86_64)
# На этой платформе torch не будет установлен, но smolagents может работать без него
# Для работы на Intel Mac рекомендуется использовать Docker с Linux образом
