[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-trigger"
version = "0.1.0"
description = "Evolution TG Trigger for a2a agents"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "loguru>=0.7.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

